<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ClockActivity!</string>
    <string name="app_name">Clock 2.0</string>
    <string name="defaultTime">00:00:00</string>
    <string name="defaultDate">00/00/0000 Sunday </string>
    <string name="defaultBattery">00</string>
    <string name="replacementBatteryIcon">Battery Icon</string>
    <string name="lightBulb">Light Bulb</string>
    <string name="volume">Volume</string>
    <string name="alarmClock">Alarm Clock</string>
    <string name="music">Music</string>

</resources>
