<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/defaultTime"
        android:textColor="#00C2FF"
        android:textSize="20pt" 
        android:layout_marginBottom="50sp"
        />

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/defaultDate"
        android:textColor="#00C2FF"
        android:textSize="7pt" />

    <TableRow
        android:id="@+id/batteryTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/batteryIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:contentDescription="@string/replacementBatteryIcon" />

        <TextView
            android:id="@+id/Battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/defaultBattery"
            android:textColor="#00C2FF"
            android:textSize="7pt" />
    </TableRow>

    <TableRow
        android:id="@+id/mainTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        
        <ImageView
            android:id="@+id/lightBulb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:contentDescription="@string/lightBulb"/>
        
        <ImageView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:contentDescription="@string/volume"/>
        
        <ImageView
            android:id="@+id/alarmClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:contentDescription="@string/alarmClock"/>
        
        <ImageView
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:contentDescription="@string/music"/>
        
    </TableRow>

</RelativeLayout>